--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -44,7 +44,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin-top: 0;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
 }
@@ -125,7 +125,7 @@ blockquote {
   padding: 0 0 4px 15px;
   margin: 0 0 0 -20px;
   font-family: $sans-serif;
-  font-size: 20px;
+  font-size: $base-font-size;
   font-style: italic;
   line-height: 1.6;
   color: $gray-light;
