--- a/_assets/stylesheets/modules/_highlights-dark.scss
+++ b/_assets/stylesheets/modules/_highlights-dark.scss
@@ -1,414 +1,157 @@
-// =============================================================================
-// Highlights dark
-// =============================================================================
-
-.highlight {
-  padding: 25px;
-  margin: 0;
-  margin: 30px 0;
+figure.highlight,
+pre.highlight {
+  padding: 1rem 1.5rem;
+  margin: 1.5rem 0;
   overflow: auto;
-  font-weight: 400;
-  background-color: darken($gray-darkest, 5);
-  border-radius: $base-border-radius;
-  pre {
-    margin: 0;
-  }
+  line-height: 1.4rem;
+  position: relative;
 }
-
-// Inline highlighting
 
 .highlighter-rouge {
+  font-weight: 300;
+  position: relative;
+}
+
+p code.highlighter-rouge,
+p kbd {
+  color: #cc6666;
+  font-size: 1rem;
+  background-color: darken($gray-darkest, 5);
   padding: 2px 4px;
-  font-size: 14px;
-  color: #f92672;
+  border-radius: 2px;
+  word-break: break-word;
+}
+
+kbd {
+  border: 1px solid darken($gray-darkest, 5);;
+  border-radius: 4px;
+}
+
+/* "data-lang" should be injected by JavaScript */
+/*
+figure.highlight::before,
+div.highlighter-rouge::before {
+    font-family: $font-family-monospace;
+    content: attr(data-lang);
+    font-size: .9rem;
+    color: $gray-200;
+    position: absolute;
+    display: block;
+    height: 1rem;
+    right: .5rem;
+    z-index: 5;
+}
+
+figure.highlight::before {
+    margin-top: -1rem;
+}
+*/
+
+.rouge-table .code pre {
+  overflow: hidden;
+}
+
+.rouge-table .code pre {
+  overflow: hidden;
+}
+
+table.rouge-table,
+table.rouge-table tr,
+table.rouge-table td,
+table.rouge-table pre {
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+table.rouge-table td.gutter {
+  padding-right: .5rem;
+  border-right: 1px solid darken($gray-darkest, 5);;
+}
+
+table.rouge-table td.code {
+  padding-left: .5rem;
+}
+
+figure pre {
+  margin-bottom: 0;
+}
+
+.lineno {
+  text-align: right;
+}
+
+/* Base16 Tomorrow Dark by Chris Kempson; https://github.com/idleberg */
+.highlight,
+.highlight pre,
+.highlight table {
   background: darken($gray-darkest, 5);
-  border: 1px solid $base-border-color;
-  border-radius: 1px;
-}
-
-// Responsive
-// =============================================================================
-
-@include breakpoint(small) {
-  .highlight {
-    font-size: 14px;
-  }
-}
-
-// Highlighting types
-// =============================================================================
-
-.highlight pre {
-  background-color: darken($gray-darkest, 5);
-}
-
-.highlight .hll {
-  background-color: darken($gray-darkest, 5);
-}
-
-// Comment
-
-.highlight .c {
-  color: #75715e;
-}
-
-// Error
-
-.highlight .err {
-  color: #960050;
-  background-color: #1e0010;
-}
-
-// Keyword
-
-.highlight .k {
-  color: #66d9ef;
-}
-
-// Literal
-
-.highlight .l {
-  color: #ae81ff;
-}
-
-// Name
-
-.highlight .n {
-  color: #f8f8f2;
-}
-
-// Operator
-
-.highlight .o {
-  color: #f92672;
-}
-
-// Punctuation
-
-.highlight .p {
-  color: #f8f8f2;
-}
-
-// Comment.Multiline
-
-.highlight .cm {
-  color: #75715e;
-}
-
-// Comment.Preproc
-
-.highlight .cp {
-  color: #75715e;
-}
-
-// Comment.Single
-
-.highlight .c1 {
-  color: #75715e;
-}
-
-// Comment.Special
-
-.highlight .cs {
-  color: #75715e;
-}
-
-// Generic.Emph
-
-.highlight .ge {
-  font-style: italic;
-}
-
-// Generic.Strong
-
-.highlight .gs {
-  font-weight: bold;
-}
-
-// Keyword.Constant
-
-.highlight .kc {
-  color: #66d9ef;
-}
-
-// Keyword.Declaration
-
-.highlight .kd {
-  color: #66d9ef;
-}
-
-// Keyword.Namespace
-
-.highlight .kn {
-  color: #f92672;
-}
-
-// Keyword.Pseudo
-
-.highlight .kp {
-  color: #66d9ef;
-}
-
-// Keyword.Reserved
-
-.highlight .kr {
-  color: #66d9ef;
-}
-
-// Keyword.Type
-
-.highlight .kt {
-  color: #66d9ef;
-}
-
-// Literal.Date
-
-.highlight .ld {
-  color: #e6db74;
-}
-
-// Literal.Number
-
-.highlight .m {
-  color: #ae81ff;
-}
-
-// Literal.String
-
-.highlight .s {
-  color: #e6db74;
-}
-
-// Name.Attribute
-
-.highlight .na {
-  color: #a6e22e;
-}
-
-// Name.Builtin
-
-.highlight .nb {
-  color: #f8f8f2;
-}
-
-// Name.Class
-
-.highlight .nc {
-  color: #a6e22e;
-}
-
-// Name.Constant
-
-.highlight .no {
-  color: #66d9ef;
-}
-
-// Name.Decorator
-
-.highlight .nd {
-  color: #a6e22e;
-}
-
-// Name.Entity
-
-.highlight .ni {
-  color: #f8f8f2;
-}
-
-// Name.Exception
-
-.highlight .ne {
-  color: #a6e22e;
-}
-
-// Name.Function
-
-.highlight .nf {
-  color: #a6e22e;
-}
-
-// Name.Label
-
-.highlight .nl {
-  color: #f8f8f2;
-}
-
-// Name.Namespace
-
-.highlight .nn {
-  color: #f8f8f2;
-}
-
-// Name.Other
-
-.highlight .nx {
-  color: #a6e22e;
-}
-
-// Name.Property
-
-.highlight .py {
-  color: #f8f8f2;
-}
-
-// Name.Tag
-
-.highlight .nt {
-  color: #f92672;
-}
-
-// Name.Variable
-
-.highlight .nv {
-  color: #f8f8f2;
-}
-
-// Operator.Word
-
-.highlight .ow {
-  color: #f92672;
-}
-
-// Text.Whitespace
-
-.highlight .w {
-  color: #f8f8f2;
-}
-
-// Literal.Number.Float
-
-.highlight .mf {
-  color: #ae81ff;
-}
-
-// Literal.Number.Hex
-
-.highlight .mh {
-  color: #ae81ff;
-}
-
-// Literal.Number.Integer
-
-.highlight .mi {
-  color: #ae81ff;
-}
-
-// Literal.Number.Oct
-
-.highlight .mo {
-  color: #ae81ff;
-}
-
-// Literal.String.Backtick
-
-.highlight .sb {
-  color: #e6db74;
-}
-
-// Literal.String.Char
-
-.highlight .sc {
-  color: #e6db74;
-}
-
-// Literal.String.Doc
-
-.highlight .sd {
-  color: #e6db74;
-}
-
-// Literal.String.Double
-
-.highlight .s2 {
-  color: #e6db74;
-}
-
-// Literal.String.Escape
-
-.highlight .se {
-  color: #ae81ff;
-}
-
-// Literal.String.Heredoc
-
-.highlight .sh {
-  color: #e6db74;
-}
-
-// Literal.String.Interpol
-
-.highlight .si {
-  color: #e6db74;
-}
-
-// Literal.String.Other
-
-.highlight .sx {
-  color: #e6db74;
-}
-
-// Literal.String.Regex
-
-.highlight .sr {
-  color: #e6db74;
-}
-
-// Literal.String.Single
-
-.highlight .s1 {
-  color: #e6db74;
-}
-
-// Literal.String.Symbol
-
-.highlight .ss {
-  color: #e6db74;
-}
-
-// Name.Builtin.Pseudo
-
-.highlight .bp {
-  color: #f8f8f2;
-}
-
-// Name.Variable.Class
-
-.highlight .vc {
-  color: #f8f8f2;
-}
-
-// Name.Variable.Global
-
-.highlight .vg {
-  color: #f8f8f2;
-}
-
-// Name.Variable.Instance
-
-.highlight .vi {
-  color: #f8f8f2;
-}
-
-// Literal.Number.Integer.Long
-
-.highlight .il {
-  color: #ae81ff;
-}
-
-// Generic.Subheading & Diff Unified/Comment?
-
-.highlight .gu {
-  color: #75715e;
-}
-
-// Generic.Deleted & Diff Deleted
-
-.highlight .gd {
-  color: #f92672;
-}
-
-// Generic.Inserted & Diff Inserted
-
-.highlight .gi {
-  color: #a6e22e;
-}
+  color: #cc6666;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.highlight .hll { background-color: #373b41 }
+.highlight .c { color: #969896 } /* Comment */
+.highlight .err { color: #cc6666 } /* Error */
+.highlight .k { color: #b294bb } /* Keyword */
+.highlight .l { color: #de935f } /* Literal */
+.highlight .n, .highlight .h { color: #ffffff } /* Name */
+.highlight .o { color: #8abeb7 } /* Operator */
+.highlight .p { color: #ffffff } /* Punctuation */
+.highlight .cm { color: #969896 } /* Comment.Multiline */
+.highlight .cp { color: #969896 } /* Comment.Preproc */
+.highlight .c1 { color: #969896 } /* Comment.Single */
+.highlight .cs { color: #969896 } /* Comment.Special */
+.highlight .gd { color: #cc6666 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gh { color: #ffffff; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #b5bd68 } /* Generic.Inserted */
+.highlight .gp { color: #969896; font-weight: bold } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #8abeb7; font-weight: bold } /* Generic.Subheading */
+.highlight .kc { color: #b294bb } /* Keyword.Constant */
+.highlight .kd { color: #b294bb } /* Keyword.Declaration */
+.highlight .kn { color: #8abeb7 } /* Keyword.Namespace */
+.highlight .kp { color: #b294bb } /* Keyword.Pseudo */
+.highlight .kr { color: #b294bb } /* Keyword.Reserved */
+.highlight .kt { color: #f0c674 } /* Keyword.Type */
+.highlight .ld { color: #b5bd68 } /* Literal.Date */
+.highlight .m { color: #de935f } /* Literal.Number */
+.highlight .s { color: #b5bd68 } /* Literal.String */
+.highlight .na { color: #81a2be } /* Name.Attribute */
+.highlight .nb { color: #ffffff } /* Name.Builtin */
+.highlight .nc { color: #f0c674 } /* Name.Class */
+.highlight .no { color: #cc6666 } /* Name.Constant */
+.highlight .nd { color: #8abeb7 } /* Name.Decorator */
+.highlight .ni { color: #ffffff } /* Name.Entity */
+.highlight .ne { color: #cc6666 } /* Name.Exception */
+.highlight .nf { color: #81a2be } /* Name.Function */
+.highlight .nl { color: #ffffff } /* Name.Label */
+.highlight .nn { color: #f0c674 } /* Name.Namespace */
+.highlight .nx { color: #81a2be } /* Name.Other */
+.highlight .py { color: #ffffff } /* Name.Property */
+.highlight .nt { color: #8abeb7 } /* Name.Tag */
+.highlight .nv { color: #cc6666 } /* Name.Variable */
+.highlight .ow { color: #8abeb7 } /* Operator.Word */
+.highlight .w { color: #ffffff } /* Text.Whitespace */
+.highlight .mf { color: #de935f } /* Literal.Number.Float */
+.highlight .mh { color: #de935f } /* Literal.Number.Hex */
+.highlight .mi { color: #de935f } /* Literal.Number.Integer */
+.highlight .mo { color: #de935f } /* Literal.Number.Oct */
+.highlight .sb { color: #b5bd68 } /* Literal.String.Backtick */
+.highlight .sc { color: #ffffff } /* Literal.String.Char */
+.highlight .sd { color: #969896 } /* Literal.String.Doc */
+.highlight .s2 { color: #b5bd68 } /* Literal.String.Double */
+.highlight .se { color: #de935f } /* Literal.String.Escape */
+.highlight .sh { color: #b5bd68 } /* Literal.String.Heredoc */
+.highlight .si { color: #de935f } /* Literal.String.Interpol */
+.highlight .sx { color: #b5bd68 } /* Literal.String.Other */
+.highlight .sr { color: #b5bd68 } /* Literal.String.Regex */
+.highlight .s1 { color: #b5bd68 } /* Literal.String.Single */
+.highlight .ss { color: #b5bd68 } /* Literal.String.Symbol */
+.highlight .bp { color: #ffffff } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #cc6666 } /* Name.Variable.Class */
+.highlight .vg { color: #cc6666 } /* Name.Variable.Global */
+.highlight .vi { color: #cc6666 } /* Name.Variable.Instance */
+.highlight .il { color: #de935f } /* Literal.Number.Integer.Long */
